BUILD. Updated html files
Relates #11

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <h1 class="header__title">SPACE PETS</h1>
             <nav class="menu">
                 <ul class="menu__list">
-                    <li class="menu__item">Home</li>
-                    <li class="menu__item">About Us</li>
-                    <li class="menu__item">Contact</li>
+                    <a href="index.html"><li class="menu__item">Home</li></a>
+                    <a href="about-us.html"><li class="menu__item">About Us</li></a>
+                    <a href="contact.html"><li class="menu__item">Contact</li></a>
                 </ul>
             </nav>
         </header>
