--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,23 @@
             </nav>
         </header>
         <main>
-            <form>
-                form includes 3 inputs for name, email and message
-            </form>
+            <form
+   id="form"
+   action="https://learn-forms.netlify.com/submit/part1"
+   method="get">
+
+<label for="name">Name</label>
+<input id="name" name="name" type="text">
+
+<label for="Email">Email</label>
+<input id="email" name="email" type="email">
+
+<label for="Question">Question</Label>
+<textarea for="question" name="question" rows="6" cols="50"></textarea> 
+
+<button type="submit">Submit</button>
+
+   </form>
             
         </main>
         <footer>
