--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width= device-width, initial-scale= 1.0">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
+        <link href="contactStyles.css" rel="stylesheet" />
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
     </head>
     <body>
@@ -27,17 +28,21 @@
             <form
    id="form"
    action="https://learn-forms.netlify.com/submit/part1"
-   method="get">
-
+   method="get"
+   class="stack-med center">
+<section class="stack-sm">
 <label for="name">Name</label>
 <input id="name" name="name" type="text">
+</section>
+<section class="stack-sm">
+    <label for="Email">Email</label>
+    <input id="email" name="email" type="email">
+</section>
 
-<label for="Email">Email</label>
-<input id="email" name="email" type="email">
-
+<section class="stack-sm">
 <label for="Question">Question</Label>
 <textarea for="question" name="question" rows="6" cols="50"></textarea> 
-
+</section>
 <button type="submit">Submit</button>
 
    </form>
