small fix with required relates #4

--- a/contact.html
+++ b/contact.html
@@ -32,16 +32,16 @@
    class="stack-med center">
 <section class="stack-sm">
 <label for="name">Name</label>
-<input id="name" name="name" type="text">
+<input id="name" name="name" type="text" required>
 </section>
 <section class="stack-sm">
     <label for="Email">Email</label>
-    <input id="email" name="email" type="email">
+    <input id="email" name="email" type="email" required>
 </section>
 
 <section class="stack-sm">
 <label for="Question">Question</Label>
-<textarea for="question" name="question" rows="6" cols="50"></textarea> 
+<textarea for="question" name="question" rows="6" cols="50" required></textarea> 
 </section>
 <button type="submit">Submit</button>
 
