--- a/about-us.html
+++ b/about-us.html
@@ -4,6 +4,7 @@
         <title>Space Pets | Proving Pets from the Moons of Jupiter to Your Home</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width= device-width, initial-scale= 1.0">
+        <meta name="description" content="Welcome to Space Pets. We specialize in importing pets from the captivating moons of Jupiter. Experience the wonder of celestial pet ownership with our carefully curated selection of extraterrestrial friends.">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
