BUILD. changes done
relates #16

--- a/about-us.html
+++ b/about-us.html
@@ -19,7 +19,7 @@
             <nav class="menu">
                 <ul class="menu__list">
                     <a href="index.html"><li class="menu__item">Home</li></a>
-                    <a href="about-us.html"><li class="menu__item">About Us</li></a>
+                    <li class="menu__item">About Us</li>
                     <a href="contact.html"><li class="menu__item">Contact</li></a>
                 </ul>
             </nav>
