--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="header__title">SPACE PETS</h1>
             <nav class="menu">
                 <ul class="menu__list">
-                    <a href="index.html"><li class="menu__item">Home</li></a>
+                    <li class="menu__item">Home</li>
                     <a href="about-us.html"><li class="menu__item">About Us</li></a>
                     <a href="contact.html"><li class="menu__item">Contact</li></a>
                 </ul>
