--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <ul class="menu__list">
                     <a href="index.html"><li class="menu__item">Home</li></a>
                     <a href="about-us.html"><li class="menu__item">About Us</li></a>
-                    <a href="contact.html"><li class="menu__item">Contact</li></a>
+                    <li class="menu__item">Contact</li>
                 </ul>
             </nav>
         </header>
