--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width= device-width, initial-scale= 1.0">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link href="contactStyles.css" rel="stylesheet" />
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
     </head>
