BUILD. Added links to menu
Relates #23

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
         <meta name="description" content="Welcome to Space Pets. We specialize in importing pets from the captivating moons of Jupiter. Experience the wonder of celestial pet ownership with our carefully curated selection of extraterrestrial friends.">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link href="contactStyles.css" rel="stylesheet" />
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
     </head>
@@ -51,6 +50,13 @@
             
         </main>
         <footer>
+            <nav class="menu footer__menu">
+                <ul class="menu__list footer__menu__list">
+                    <a href="index.html"><li class="menu__item footer__menu_item">Home</li></a>
+                    <a href="index.html"><li class="menu__item footer__menu_item">About Us</li></a>
+                    <li class="menu__item footer__menu_item">Contact</li>
+                </ul>
+            </nav>
         </footer>
     </body>
 </html>
