--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
         <meta name="description" content="Welcome to Space Pets. We specialize in importing pets from the captivating moons of Jupiter. Experience the wonder of celestial pet ownership with our carefully curated selection of extraterrestrial friends.">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
     </head>
     <body>
 
         <header class="header">
-            <a class="link__logo" href="index.html">
+            <a class="link__logo" href="">
                 <img class="logo" src="imgs/solar-system2.png" alt="home">
             </a>
             <h1 class="header__title">SPACE PETS</h1>
             <nav class="menu">
                 <ul class="menu__list">
-                    <li class="menu__item">Home</li>
+                    <li class="menu__item">Home</li></a>
                     <a href="about-us.html"><li class="menu__item">About Us</li></a>
                     <a href="contact.html"><li class="menu__item">Contact</li></a>
                 </ul>
@@ -56,8 +55,8 @@
             <nav class="menu footer__menu">
                 <ul class="menu__list footer__menu__list">
                     <li class="menu__item footer__menu_item">Home</li>
-                    <li class="menu__item footer__menu_item">About Us</li>
-                    <li class="menu__item footer__menu_item">Contact</li>
+                    <a href="about-us.html"><li class="menu__item footer__menu_item">About Us</li></a>
+                    <a href="contact.html"><li class="menu__item footer__menu_item">Contact</li></a>
                 </ul>
             </nav>
         </footer>
