--- a/about-us.html
+++ b/about-us.html
@@ -29,7 +29,14 @@
             
             
         </main>
-        <footer>
+        <footer>    
+            <nav class="menu footer__menu">
+                <ul class="menu__list footer__menu__list">
+                    <a href="index.html"><li class="menu__item footer__menu_item">Home</li></a>
+                    <li class="menu__item footer__menu_item">About Us</li>
+                    <a href="contact.html"><li class="menu__item footer__menu_item">Contact</li></a>
+                </ul>
+            </nav>
         </footer>
     </body>
 </html>
