--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="styles.css">
         <link href="contactStyles.css" rel="stylesheet" />
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
     <body>
 
