adding some css style to the about us page relates #26

--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Welcome to Space Pets. We specialize in importing pets from the captivating moons of Jupiter. Experience the wonder of celestial pet ownership with our carefully curated selection of extraterrestrial friends.">
         <link rel="stylesheet" href="normalize.css">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="aboutussstyles.css">
         <link rel="icon" type="image/png" sizes="16x16,32x32,64x64" href="imgs/solar-system.png">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
@@ -29,12 +30,12 @@
             <h1>About Us</h1>
             <p>The creators of our Space Pets, the visionary minds behind this extraordinary venture, are a dynamic duo driven by their shared passion for interplanetary exploration and the love for unique pets</p>
             <div>
-                <div>
+                <div class="bio">
                     <img src="https://robohash.org/shaughnfatale">
                     <p>Meet <strong>Shaughn</strong>, an astrophysicist with a deep understanding of celestial bodies and a boundless curiosity about the mysteries of the universe. With a background in space research and a profound appreciation for the wonders beyond Earth, Shaughn brings scientific expertise and a keen eye for identifying the potential of these otherworldly pets.</p>
                 </div>
                 
-                <div>
+                <div class="bio">
                     <img src="https://robohash.org/carlosbuitrago">
                     <p><strong>Carlos</strong> is seasoned animal enthusiast and a compassionate advocate for responsible pet ownership. Drawing from their extensive experience in animal care and welfare, Carlos ensures that the well-being and ethical considerations of these unique companions are at the forefront of the agency's mission.</p>
                 </div>
