edited form for usability
relates #13

--- a/about-us.html
+++ b/about-us.html
@@ -21,7 +21,7 @@
             <nav class="menu">
                 <ul class="menu__list">
                     <a href="index.html"><li class="menu__item">Home</li></a>
-                    <li class="menu__item">About Us</li>
+                    <li class="menu__item">About</li>
                     <a href="contact.html"><li class="menu__item">Contact</li></a>
                 </ul>
             </nav>
@@ -46,7 +46,7 @@
             <nav class="menu footer__menu">
                 <ul class="menu__list footer__menu__list">
                     <a href="index.html"><li class="menu__item footer__menu_item">Home</li></a>
-                    <li class="menu__item footer__menu_item">About Us</li>
+                    <li class="menu__item footer__menu_item">About</li>
                     <a href="contact.html"><li class="menu__item footer__menu_item">Contact</li></a>
                 </ul>
             </nav>
