--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="menu">
                 <ul class="menu__list">
                     <li class="menu__item">Home</li></a>
-                    <a href="about-us.html"><li class="menu__item">About Us</li></a>
+                    <a href="about-us.html"><li class="menu__item">About</li></a>
                     <a href="contact.html"><li class="menu__item">Contact</li></a>
                 </ul>
             </nav>
@@ -56,7 +56,7 @@
             <nav class="menu footer__menu">
                 <ul class="menu__list footer__menu__list">
                     <li class="menu__item footer__menu_item">Home</li>
-                    <a href="about-us.html"><li class="menu__item footer__menu_item">About Us</li></a>
+                    <a href="about-us.html"><li class="menu__item footer__menu_item">About</li></a>
                     <a href="contact.html"><li class="menu__item footer__menu_item">Contact</li></a>
                 </ul>
             </nav>
