--- a/contact.html
+++ b/contact.html
@@ -14,47 +14,57 @@
     <body>
 
         <header class="header">
+
             <a class="link__logo" href="index.html">
                 <img class="logo" src="imgs/solar-system2.png" alt="home">
             </a>
-            <h1 class="header__title">SPACE PETS</h1>
+
+            <h2 class="header__title">SPACE PETS</h2>
+
             <nav class="menu">
                 <ul class="menu__list">
                     <a href="index.html"><li class="menu__item">Home</li></a>
-                    <a href="about-us.html"><li class="menu__item">About Us</li></a>
+                    <a href="about-us.html"><li class="menu__item">About</li></a>
                     <li class="menu__item">Contact</li>
                 </ul>
             </nav>
         </header>
+
+
         <main>
-            <form
-   id="form"
-   action="https://learn-forms.netlify.com/submit/part1"
-   method="get"
-   class="stack-med center">
-<section class="stack-sm">
-<label for="name">Name</label>
-<input id="name" name="name" type="text" required>
-</section>
-<section class="stack-sm">
-    <label for="Email">Email</label>
-    <input id="email" name="email" type="email" required>
-</section>
 
-<section class="stack-sm">
-<label for="Question">Question</Label>
-<textarea for="question" name="question" rows="6" cols="50" required></textarea> 
-</section>
-<button type="submit">Submit</button>
+            <h1>Contact Us</h1>
 
-   </form>
-            
+            <p>A member of our team will get in touch within 24 hours</p>
+
+            <form id="form" action="https://learn-forms.netlify.com/submit/part1" method="get" class="stack-med center">
+
+                <section class="stack-sm">
+                    <label for="name">Name <span>(required)</span></label>
+                    <input id="name" name="edit name" type="text" required>
+                </section>
+                
+                <section class="stack-sm">
+                    <label for="email">Email <span>(required)</span></label>
+                    <input id="email" name="email" type="email" required>
+                </section>
+
+                <section class="stack-sm">
+                    <label for="question">Question <span>(required)</span></Label>
+                    <textarea id="question" name="question" rows="6" cols="50" required></textarea> 
+                </section>
+
+                <button type="submit">Submit</button>
+
+            </form>   
         </main>
+
+
         <footer>
             <nav class="menu footer__menu">
                 <ul class="menu__list footer__menu__list">
                     <a href="index.html"><li class="menu__item footer__menu_item">Home</li></a>
-                    <a href="index.html"><li class="menu__item footer__menu_item">About Us</li></a>
+                    <a href="index.html"><li class="menu__item footer__menu_item">About</li></a>
                     <li class="menu__item footer__menu_item">Contact</li>
                 </ul>
             </nav>
