styled about page
relates #26

--- a/about-us.html
+++ b/about-us.html
@@ -27,17 +27,21 @@
             </nav>
         </header>
         <main>
-            <h1>About Us</h1>
-            <p>The creators of our Space Pets, the visionary minds behind this extraordinary venture, are a dynamic duo driven by their shared passion for interplanetary exploration and the love for unique pets</p>
+
+            <div class="main__intro">
+                <h1>About Us</h1>
+                <p>The creators of Space Pets are a dynamic duo driven by their shared passion for interplanetary exploration and the love for unique pets</p>
+            </div>
+
             <div>
-                <div class="bio">
-                    <img src="https://robohash.org/shaughnfatale">
-                    <p>Meet <strong>Shaughn</strong>, an astrophysicist with a deep understanding of celestial bodies and a boundless curiosity about the mysteries of the universe. With a background in space research and a profound appreciation for the wonders beyond Earth, Shaughn brings scientific expertise and a keen eye for identifying the potential of these otherworldly pets.</p>
+                <div class="bio__card">
+                    <img alt="Shaughn's Picture" class="robots" src="https://robohash.org/shaughnfatale">
+                    <p class="card__description"><strong>Shaughn</strong> is an astrophysicist with a background in space research. They bring scientific expertise and a keen eye for otherworldly pets.</p>
                 </div>
                 
-                <div class="bio">
-                    <img src="https://robohash.org/carlosbuitrago">
-                    <p><strong>Carlos</strong> is seasoned animal enthusiast and a compassionate advocate for responsible pet ownership. Drawing from their extensive experience in animal care and welfare, Carlos ensures that the well-being and ethical considerations of these unique companions are at the forefront of the agency's mission.</p>
+                <div class="bio__card">
+                    <img alt="Carlos' Picture" class='robots' src="https://robohash.org/carlosbuitrago">
+                    <p class="card__description"><strong>Carlos</strong> is an animal enthusiast. He ensures that the well-being of these companions is at the forefront of the agency's mission.</p>
                 </div>
             </div>
             
