changed font sizes

--- a/about-us.html
+++ b/about-us.html
@@ -36,12 +36,12 @@
             <div>
                 <div class="bio__card">
                     <img alt="Shaughn's Picture" class="robots" src="https://robohash.org/shaughnfatale">
-                    <p class="card__description"><strong>Shaughn</strong> is an astrophysicist with a background in space research. They bring scientific expertise and a keen eye for otherworldly pets.</p>
+                    <p class="card__description">Shaughn is an astrophysicist with a background in space research. They bring scientific expertise and a keen eye for otherworldly pets.</p>
                 </div>
                 
                 <div class="bio__card">
                     <img alt="Carlos' Picture" class='robots' src="https://robohash.org/carlosbuitrago">
-                    <p class="card__description"><strong>Carlos</strong> is an animal enthusiast. He ensures that the well-being of these companions is at the forefront of the agency's mission.</p>
+                    <p class="card__description">Carlos is an animal enthusiast. He ensures that the well-being of these companions is at the forefront of the agency's mission.</p>
                 </div>
             </div>
             
