styled home page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <article class="intro__image_container">
             <div class="intro__paragraph_container">
-                <p class="intro__paragraph">Welcome to Space Pets. We specialize in importing pets from the captivating moons of Jupiter. Experience the wonder of celestial pet ownership with our carefully curated selection of extraterrestrial friends.</p>
+                <h2 class="into__title">Welcome to Space Pets</h2>
+                <p class="intro__paragraph">We specialize in importing pets from the captivating moons of Jupiter.</p>
             </div>
         </article>
         
